# dart_pty

./: CLAUDE.md  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart  tab_bar_widget.dart  terminal_page.dart  terminal_tab.dart  theme.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: dart_pty.dart  dart_pty_bindings_generated.dart
lib/src/: dart_pty_bindings_generated.dart  pty.dart
linux/: CMakeLists.txt
macos/: dart_pty.podspec
macos/Classes/: dart_pty.c
src/: CMakeLists.txt  dart_pty.c  dart_pty.h  dart_pty_unix.c  dart_pty_win.c
windows/: CMakeLists.txt
